[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/Sprite/Zombie Shooter/dead/zombie-dead_02.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/dead/zombie-dead_00.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/dead/zombie-dead_03.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/dead/zombie-dead_05.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/dead/zombie-dead_06.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/dead/zombie-dead_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/dead/zombie-dead_01.png" type="Texture" id=7]
[ext_resource path="res://Assets/Script/Zombie Shooter.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/attack/zombie-attack_02.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/attack/zombie-attack_05.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/attack/zombie-attack_06.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/attack/zombie-attack_07.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/attack/zombie-attack_01.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/attack/zombie-attack_04.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/attack/zombie-attack_08.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/attack/zombie-attack_03.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/attack/zombie-attack_00.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/shoot/zombie-shot_00.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/shoot/zombie-shot_01.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/shoot/zombie-shot_02.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/shoot/zombie-shot_05.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/shoot/zombie-shot_04.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprite/Zombie Shooter/shoot/zombie-shot_03.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sounds/Zombie Shoot.ogg" type="AudioStream" id=24]
[ext_resource path="res://Assets/Sounds/Impact Bullet.wav" type="AudioStream" id=25]
[ext_resource path="res://Assets/Sounds/Evade.wav" type="AudioStream" id=26]

[sub_resource type="CapsuleShape2D" id=7]
radius = 24.0
height = 44.0

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Dead"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.8, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:_revive")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "Revive"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.8, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:_revive")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_physics_process"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_anim"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:can_fire")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:can_fire")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 965.378

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18.5, 51.625 )

[sub_resource type="CircleShape2D" id=5]
radius = 222.612

[sub_resource type="CircleShape2D" id=9]
radius = 49.0

[node name="Zombie Shooter" type="KinematicBody2D" groups=["Revive"]]
z_index = 1
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -30, 1 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.8
anims/Attack = SubResource( 3 )
anims/Dead = SubResource( 2 )
anims/Revive = SubResource( 10 )
anims/Shoot = SubResource( 6 )

[node name="Shoot" type="Area2D" parent="."]
visible = false
position = Vector2( 516, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shoot"]
position = Vector2( 326, -22 )
shape = SubResource( 4 )

[node name="Attack" type="Area2D" parent="."]
position = Vector2( -52, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( 98, 0.375 )
shape = SubResource( 8 )

[node name="Evade" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Evade"]
shape = SubResource( 5 )

[node name="Life" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Life"]
position = Vector2( -22, 2 )
shape = SubResource( 9 )

[node name="FirePoint" type="Node2D" parent="."]
position = Vector2( 53, 3 )

[node name="EvadeRight" type="Node2D" parent="."]
position = Vector2( 0, -135 )

[node name="EvadeLeft" type="Node2D" parent="."]
position = Vector2( 0, 135 )

[node name="SoundShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
volume_db = -7.0
pitch_scale = 1.5

[node name="ImpactBullet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )

[node name="SoundEvade" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )

[connection signal="body_entered" from="Shoot" to="." method="_on_Shoot_body_entered"]
[connection signal="body_exited" from="Shoot" to="." method="_on_Shoot_body_exited"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_Attack_body_exited"]
[connection signal="body_entered" from="Evade" to="." method="_on_Evade_body_entered"]
[connection signal="body_entered" from="Life" to="." method="_on_Life_body_entered"]
